--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
             text-align: center;
         }
 
+        .venue-info {
+            background-color: rgba(27, 54, 92, 0.05);
+            padding: 1.2rem;
+            margin: 0.5rem 0;
+            border-radius: 8px;
+        }
+
+        .venue-info p {
+            margin: 0;
+            color: var(--navy-blue);
+            font-size: 1.2rem;
+            text-align: center;
+        }
+
         .rsvp-button {
             width: 100%;
             margin: 0;
@@ -152,16 +166,60 @@
             transform: translateY(-2px);
         }
 
-        .success-message {
+        .success-overlay {
             display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--navy-blue);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+            opacity: 0;
+            transition: opacity 0.5s ease;
+        }
+
+        .success-overlay.show {
+            display: flex;
+            opacity: 1;
+        }
+
+        .success-content {
             text-align: center;
-            color: var(--navy-blue);
-            font-size: 1.4rem;
-            margin-top: 2rem;
+            color: white;
             padding: 2rem;
-            background-color: rgba(250, 247, 242, 0.9);
+            max-width: 600px;
+        }
+
+        .success-content h2 {
+            font-size: 2.5rem;
+            margin-bottom: 1.5rem;
+            color: var(--gold);
+        }
+
+        .success-content p {
+            color: white;
+            font-size: 1.4rem;
+            margin-bottom: 2rem;
+        }
+
+        .success-button {
+            background-color: var(--gold);
+            color: var(--navy-blue);
+            border: none;
+            padding: 1rem 2.5rem;
+            font-size: 1.2rem;
             border-radius: 8px;
-            border: 1px solid var(--gold);
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-family: 'Cormorant Garamond', serif;
+        }
+
+        .success-button:hover {
+            background-color: #E5C9A0;
+            transform: translateY(-2px);
         }
 
         @media (max-width: 600px) {
@@ -184,6 +242,8 @@
         }
     </style>
 </head>
+<!DOCTYPE html>
+
 <body>
     <div class="container">
         <div class="slide active" id="invitation">
@@ -198,7 +258,8 @@
         <div class="slide" id="rsvp-form">
             <img src="wedding-1.png" alt="Priscilla & Rayan" class="main-image">
             <div class="content">
-                <form name="wedding-rsvp" netlify>
+                <form name="wedding-rsvp" method="POST" data-netlify="true">
+                    <input type="hidden" name="form-name" value="wedding-rsvp" />
                     <p>
                         <label>First Name <input type="text" name="firstname" required /></label>
                     </p>
@@ -219,7 +280,7 @@
                     </p>
                     <div id="guestSection" style="display: none;">
                         <p>
-                            <label>Will you be bringing guests?
+                            <label>Are you bringing adult guests?
                                 <select name="bringing_guests" onchange="toggleGuestCount(this.value)">
                                     <option value="no">No additional guests</option>
                                     <option value="yes">Yes, I will bring guests</option>
@@ -227,12 +288,30 @@
                             </label>
                         </p>
                         <p id="guestCountSection" style="display: none;">
-                            <label>Number of additional guests
+                            <label>Number of adult guests
                                 <select name="guest_count">
                                     <option value="1">1 guest</option>
                                     <option value="2">2 guests</option>
                                     <option value="3">3 guests</option>
                                     <option value="4">4 guests</option>
+                                </select>
+                            </label>
+                        </p>
+                        <p>
+                            <label>Are you bringing children? (The venue features a beautiful farm with friendly animals)
+                                <select name="bringing_children" onchange="toggleChildCount(this.value)">
+                                    <option value="no">No children</option>
+                                    <option value="yes">Yes, I will bring children</option>
+                                </select>
+                            </label>
+                        </p>
+                        <p id="childCountSection" style="display: none;">
+                            <label>Number of children
+                                <select name="child_count">
+                                    <option value="1">1 child</option>
+                                    <option value="2">2 children</option>
+                                    <option value="3">3 children</option>
+                                    <option value="4">4 children</option>
                                 </select>
                             </label>
                         </p>
@@ -242,10 +321,17 @@
                         <button type="submit">Send RSVP</button>
                     </div>
                 </form>
-                <div class="success-message" id="successMessage">
-                    Thank you for your RSVP!
-                </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Success Overlay -->
+    <div class="success-overlay" id="successOverlay">
+        <div class="success-content">
+            <h2>Thank You!</h2>
+            <p>We've received your RSVP and can't wait to celebrate with you!</p>
+            <p>Get ready for a magical evening filled with love, joy, and celebration.</p>
+            <button class="success-button" onclick="window.location.href='/'">Back to Invitation</button>
         </div>
     </div>
 
@@ -266,6 +352,8 @@
             if (value !== 'yes') {
                 document.querySelector('[name="bringing_guests"]').value = 'no';
                 document.getElementById('guestCountSection').style.display = 'none';
+                document.querySelector('[name="bringing_children"]').value = 'no';
+                document.getElementById('childCountSection').style.display = 'none';
             }
         }
 
@@ -274,11 +362,27 @@
             guestCountSection.style.display = value === 'yes' ? 'block' : 'none';
         }
 
+        function toggleChildCount(value) {
+            const childCountSection = document.getElementById('childCountSection');
+            childCountSection.style.display = value === 'yes' ? 'block' : 'none';
+        }
+
+        // Form submission handler
         document.querySelector('form').addEventListener('submit', function(e) {
             e.preventDefault();
-            setTimeout(() => {
-                document.getElementById('successMessage').style.display = 'block';
-            }, 1000);
+            const form = e.target;
+            fetch('/', {
+                method: 'POST',
+                headers: { "Content-Type": "application/x-www-form-urlencoded" },
+                body: new URLSearchParams(new FormData(form)).toString()
+            })
+            .then(() => {
+                document.getElementById('successOverlay').classList.add('show');
+            })
+            .catch((error) => {
+                console.error(error);
+                alert('Oops! There was a problem submitting your RSVP. Please try again.');
+            });
         });
     </script>
 </body>
