--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
                         <p id="guestCountSection" style="display: none;">
                             <label>Number of adult guests
                                 <select name="guest_count">
+                                    <option value="0">Select number of guests</option>
                                     <option value="1">1 guest</option>
                                     <option value="2">2 guests</option>
                                     <option value="3">3 guests</option>
@@ -307,7 +308,7 @@
                         <p id="childCountSection" style="display: none;">
                             <label>Number of children
                                 <select name="child_count">
-                                    <option value="">Select number of children</option>
+                                    <option value="0">Select number of children</option>
                                     <option value="1">1 child</option>
                                     <option value="2">2 children</option>
                                     <option value="3">3 children</option>
